k8s/apps/base/openpanel/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openpanel-api
  namespace: openpanel
  labels:
    app: openpanel-api
spec:
  type: ClusterIP
  ports:
    - port: 3333
      targetPort: 3000
      protocol: TCP
      name: http
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: metrics
  selector:
    app: openpanel-api
    version: blue
