k8s/apps/base/openpanel/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: openpanel
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
    - port: 9187
      targetPort: 9187
      protocol: TCP
      name: metrics
  selector:
    app: postgres
