k8s/apps/base/openpanel/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: openpanel
  labels:
    app: redis
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: redis
    - port: 9121
      targetPort: 9121
      protocol: TCP
      name: metrics
  selector:
    app: redis
