k8s/apps/base/openpanel/start-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openpanel-start
  namespace: openpanel
  labels:
    app: openpanel-start
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: openpanel-start
